# tracking_face_detection_and_ui

map_process/: CMakeLists.txt  package.xml
map_process/config/target_pose_file/: target_pose.csv
map_process/include/map_process/: map_process.h  map_saver.h  map_server.h
map_process/launch/: map_server_test.launch
map_process/msg/: taregt_pose.msg  task.msg
map_process/src/: map_process_node.cpp  map_server.cpp
robot_mrobot/mrobot_gazebo/urdf/: mrobot_body.urdf.xacro  mrobot_with_rplidar.urdf.xacro  rplidar.xacro
robot_mrobot/mrobot_navigation/config/mrobot/: costmap_common_params.yaml
robot_mrobot/mrobot_navigation/launch/: gmapping_demo.launch  move_base.launch
ros_ui/: CMakeLists.txt  package.xml
ros_ui/config/map_file/: map.pgm  map.yaml  map1.pgm  map1.yaml
ros_ui/config/target_pose_file/: target_pose1.csv  target_pose2.csv
ros_ui/include/ros_ui/: main_window.hpp  mainwindow2.hpp  qnode.hpp
ros_ui/launch/: ros_ui_navi.launch  ros_ui_track.launch
ros_ui/resources/: images.qrc
ros_ui/src/: main.cpp  main_window.cpp  mainwindow2.cpp  qnode.cpp
ros_ui/ui/: 1_main_window.ui  main_window.ui  mainwindow2.ui
track_detection/: CMakeLists.txt  package.xml
track_detection/data/: haarcascade_profileface.xml
track_detection/include/track_detection/: Track_Detection.h
track_detection/launch/: navigation.launch  track_detection.launch
track_detection/launch/include/: Track_Detecation.launch  face_detector.launch  move_base.launch
track_detection/mv_config/: base_local_planner_params.yaml
track_detection/scripts/: face_detector.py
track_detection/src/: Track_Detection.cpp
